--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <input type="radio" name="radio" id="Not sure" value="Not sure">
                 <label for="Not sure">Not sure</label><br>
                 <input type="radio" name="radio" id="definetelyno" value="definetelyno">
-                <label for="Ndefşnetelyno">Definetely, No</label><br>
+                <label for="definetelyno">Definetely, No</label><br>
             </div>
             <div class="select2">
                 <label for="select1">What is your favorite feature of Clarusway?</label><br>
